Texts update. Hide about section

--- a/parts/menu.jade
+++ b/parts/menu.jade
@@ -1,6 +1,6 @@
 .menu-list
-	a(href="/")
-		.menu-item About
+	//- a(href="/")
+	//- 	.menu-item About
 	a(href="/services")
 		.menu-item Services
 	a(href="/portfolio")
