--- a/portfolio/yow/index.jade
+++ b/portfolio/yow/index.jade
@@ -44,20 +44,17 @@ html(lang="en")
 			.container
 				.section-top
 					h1.title.dark Technologies
-					h2.sub-title Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.
+					h2.sub-title Our technical team used a comprehensive set of tools and technologies during YOW development.
 					.tags
-						.tag Angular JS
-						.tag Jade
-						.tag Stylus
-						.tag GulpJS, lodash
-						.tag Yeoman
+						.tag C#
+						.tag Xamarin Framework
+						.tag Open GeoData
 						.tag Google Maps
+						.tag Google Places
 						.tag Geolocation
 						.tag AWS (EC2)
 						.tag Jenkins
 						.tag Git
-						.tag Karma
-						.tag Jasmine
 
 		section#about
 			.desktop-container
@@ -66,7 +63,7 @@ html(lang="en")
 				.container
 					.section-top
 						h1.title.dark About App
-						h2.sub-title In the beginning, your travel map is black, but whenever you visit a new country, city or street it unveils an area which was black before and marks the place you have been to. The map is based on the Google Maps API. You can build the list of the favorite places, use navigation for finding spots.
+						h2.sub-title YOW is a mobile application that functions as a travel scratch map. In the beginning, your travel map is black, but whenever you visit a new country, city or street it unveils an area which was black before and marks the place you have been to. The map is based on the Google Maps API. You can build the list of the favorite places, use navigation for finding spots.
 
 		section#share
 
