--- a/styl/general.styl
+++ b/styl/general.styl
@@ -194,6 +194,7 @@ body
 				transform: rotate(45deg) translateY(-2px)
 
 .mobile-nav
+	display: block
 	position: fixed
 	width: 100%
 	height: 100%
@@ -212,6 +213,10 @@ body
 			font-weight: 400
 			&:hover
 				color: #ffffff
+				
+	@media screen and (min-width: $screenSmall)
+	
+		display: none
 
 .tags
 	display: flex
