index text changed; headings (h1, h2, ...) fixed

--- a/index.jade
+++ b/index.jade
@@ -10,22 +10,22 @@ html(lang="en")
 				.small
 				.large
 			.container
-				h1.title Get What Uneed
-				h2.sub-title Equipped with latest technologies and best tech talents, we bring qualitative and efficient software to light up your digital world
+				h1.title Distinctive Web Development
+				h3.sub-title Shaping your tech ideas with smart engineering,<br> creating an outreach for your business.
 			#scroll-down
 				include icons/arrow
 
 		section#info.animated.section-top.flex.align-ver-center
 			.container
-				h1.title.dark Our Services
-				h2.sub-title Depending on time, budget, scope, and complexity of your projects we provide 3 options to help your business maintain, extend and acquire qualitative IT resources.
+				h2.title.dark Our Services
+				h3.sub-title Depending on time, budget, scope, and complexity of your projects we provide 3 options to help your business maintain, extend and acquire qualitative IT resources.
 
 		section#services.animated.flex.align-ver-center
 			.container.service.flex.flex-column.align-ver-center(data-href="/services/outsource")
 				img.service-image(src="/images/gif/outsource.gif" width="100" height="100")
 				.service-description
-					h1.title.dark.service-title Project Development
-					h2.sub-title.service-subtitle recommended for
+					h4.title.dark.service-title Project Development
+					h5.sub-title.service-subtitle recommended for
 					ul.service-list
 						li 
 							span 
@@ -45,8 +45,8 @@ html(lang="en")
 			.container.service.flex.flex-column.align-ver-center(data-href="/services/outstaff")
 				img.service-image(src="/images/gif/outstaff.gif" width="100" height="100")
 				.service-description
-					h1.title.dark.service-title Dedicated Development Team
-					h2.sub-title.service-subtitle recommended for
+					h4.title.dark.service-title Dedicated Development Team
+					h5.sub-title.service-subtitle recommended for
 					ul.service-list
 						li 
 							span 
@@ -62,8 +62,8 @@ html(lang="en")
 			.container.service.flex.flex-column.align-ver-center(data-href="/services/relocation")
 				img.service-image(src="/images/gif/relocation.gif" width="100" height="100")
 				.service-description
-					h1.title.dark.service-title Specialist for Relocation
-					h2.sub-title.service-subtitle recommended for
+					h4.title.dark.service-title Specialist for Relocation
+					h5.sub-title.service-subtitle recommended for
 					ul.service-list
 						li 
 							span 
@@ -83,8 +83,8 @@ html(lang="en")
 		section#guarantee.animated.flex.align-ver-center
 			.container
 				.section-top
-					h1.title Our Added Value
-					h2.sub-title With delivering what we do the best: development and design of software we provide our customers with 
+					h2.title Our Added Value
+					h3.sub-title With delivering what we do the best: development and design of software we provide our customers with 
 				.features-container
 					.feature
 						include icons/1-quality
@@ -110,18 +110,18 @@ html(lang="en")
 		section#portfolio.animated
 			.container
 				.section-top
-					h1.title.dark Our Expertise
-					h2.sub-title Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
+					h2.title.dark Our Expertise
+					h3.sub-title Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
 
 				#switcher
 					#switch-left
 						include icons/left-arrow
 					a(onclick="uneed.onChangePortfolio(0)").active
-						h2.sub-title Web Development
+						h4.sub-title Web Development
 					a(onclick="uneed.onChangePortfolio(1)")
-						h2.sub-title Mobile Development
+						h4.sub-title Mobile Development
 					a(onclick="uneed.onChangePortfolio(2)")
-						h2.sub-title Product Design
+						h4.sub-title Product Design
 					#switch-right
 						include icons/left-arrow
 
@@ -129,7 +129,7 @@ html(lang="en")
 					.slides
 						.slide(data-tappable="true")
 							.portfolio-item(data-tappable="true")
-								h2.sub-title Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
+								p.portfolio-item-descr Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
 
 								.tags
 									.tag React JS
@@ -148,7 +148,7 @@ html(lang="en")
 
 						.slide(data-tappable="true")
 							.portfolio-item(data-tappable="true")
-								h2.sub-title Uneed Web builds mobile applications by using cross-platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
+								p.portfolio-item-descr Uneed Web builds mobile applications by using cross-platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
 
 								.tags
 									.tag ReactJS Native
@@ -165,7 +165,7 @@ html(lang="en")
 
 						.slide(data-tappable="true")
 							.portfolio-item(data-tappable="true")
-								h2.sub-title Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
+								p.portfolio-item-descr Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
 
 								.tags
 									.tag Sketch
