--- a/parts/footer.jade
+++ b/parts/footer.jade
@@ -6,7 +6,7 @@ footer
 				p
 					| &copy; 2017 UNeed Web All Rights Reserved
 		.subscribe
-			h1 Get in touch with us
+			h2.subscribe-title Get in touch with us
 			.subscribe-form
 				input(type="text" placeholder="Enter your email")
 				button(role="button") OK
