--- a/styl/portfolio.styl
+++ b/styl/portfolio.styl
@@ -159,7 +159,8 @@
 				margin-bottom: 2.5rem
 
 #portfolio-page, #portfolio-project-page			
-	h2.type
+	.type
+		margin: 0.8rem 0
 		font-size: 13px
 		letter-spacing: 0.3px
 		color: white
@@ -203,7 +204,7 @@
 			display: none
 		.type
 			color: #8492af
-		h1.title
+		.title
 			margin-top: 0
 		.tags
 			margin: 2rem 0
@@ -232,7 +233,7 @@
 			
 	#approaches
 		background-size: cover
-		h2.sub-title
+		.sub-title
 			font-weight: 300
 			color: #f3f8ff
 		&.travel
