--- a/styl/services.styl
+++ b/styl/services.styl
@@ -1,10 +1,10 @@
 #services-page
 	#description
 		padding-top: 7.6rem
-		h2.sub-title
+		.sub-title
 			font-weight: 400
 		@media screen and (min-width: $screenSmall)
-			h2.sub-title
+			.sub-title
 				width: 100%
 				margin: auto
 
@@ -176,22 +176,22 @@
 
 	#description
 		padding: 2rem 1rem 4rem 1rem
-		h1
+		.title
 			font-size: 24px
 			text-align: left
 			color: #0e1a35
-		h2
+		.sub-title
 			text-align: left
 		@media screen and (min-width: $screenSmall)
 			position: relative
 			.container
 				padding-right: 20rem
 				width: 100%
-				h1
+				.title
 					font-size: 48px
 					line-height: 1
 					color: #0e1a35
-				h2
+				.sub-title
 					font-size: 18px
 					line-height: 1.33
 					&.result
@@ -218,7 +218,7 @@
 				padding-right: 13rem
 			.service-image
 				width: 30%
-			h2.sub-title
+			.sub-title
 				width: auto
 		@media screen and (min-width: $screenLarge)
 			.container
