--- a/styl/contact-us.styl
+++ b/styl/contact-us.styl
@@ -27,7 +27,7 @@
 	#contact-heading
 		padding-top: 7.6rem
 		@media screen and (min-width: $screenMedium)
-			h2.sub-title
+			.sub-title
 				text-align: center
 		
 	#contact-body
@@ -35,7 +35,7 @@
 			max-width: 25rem
 			margin: auto
 			padding: 1rem 1rem 4rem 1rem
-			h1.title
+			.title
 				display: none
 			form
 				display: flex
@@ -52,7 +52,7 @@
 			.icon
 				margin-right: .9rem
 			.details
-				h1
+				.title
 					font-size: 21px
 					line-height: 1.14
 					font-weight: 400
@@ -85,7 +85,7 @@
 				padding: 3rem 1rem
 			.contact-form
 				padding: 2.5rem 0
-				h1.title
+				.title
 					display: block
 					font-size: 21px
 					font-weight: 400
