--- a/styl/yow.styl
+++ b/styl/yow.styl
@@ -22,6 +22,7 @@
 			button
 				display: block
 				font-size: 0
+				background-color: transparent
 				&.prev-project
 					padding-left: 0
 				&.next-project
