BEM: index.jade; contact-us/index.jade; parts/head.jade, parts/header.jade, parts/main-nav.jade, parts/footer.jade

--- a/parts/b-header.jade
+++ b/parts/b-header.jade
@@ -10,5 +10,7 @@ mixin b-header(modifier, title, text)
 					include ../icons/logo
 					include ../icons/logo-text
 			include b-main-nav
-			h1.page-header__title #{title}
-			p.page-header__text #{text}
+			- if (title)
+				h1.page-header__title #{title}
+			- if (text)
+				p.page-header__text #{text}
