YOW logo bug fixed

--- a/styl/yow.styl
+++ b/styl/yow.styl
@@ -51,7 +51,7 @@
 					&.icon-1, &.icon-2
 						display: none
 					
-				svg
+				.arrow-wrapper
 					display: none
 				
 				@media screen and (min-width: $screenSmall)
@@ -62,7 +62,7 @@
 						&.icon-1, &.icon-2
 							display: block
 							
-					svg
+					.arrow-wrapper
 						display: block
 						width: 19px
 						height: 36px
@@ -72,7 +72,7 @@
 					width: 742px
 					background-position: center left 15.5rem, center, center right 15.5rem
 					
-					svg
+					.arrow-wrapper
 						&:nth-child(1)
 							left: 28.5rem
 						&:nth-child(2)
