--- a/b-index.jade
+++ b/b-index.jade
@@ -8,98 +8,107 @@ html(lang="en")
 			include parts/b-header
 			+b-header("main", "Distinctive Web Development", "Shaping your tech ideas with smart engineering, creating an outreach for your business.")
 
-			main.page-content
+			main.page-content#main
 
 				section.section
-					h2.section__title Our Services
-					p.section__text Depending on time, budget, scope, and complexity of your projects we provide 3 options to help your business maintain, extend and acquire qualitative IT resources.
+					.section__wrapper
+						h2.section__title Our Services
+						p.section__text Depending on time, budget, scope, and complexity of your projects we provide 3 options to help your business maintain, extend and acquire qualitative IT resources.
 
-				section.section
+				section.section.section--without-title
 					.services
 						ul.services__list
 							li.services__item
 								.services__item-wrapper
 									h3.services__title Project Development
 									span.services__recommend recommended for
-									p.services__text short-term projects
+									ul.services__-wrapper
+										li.services__ short-term projects
+										li.services__ fixed cost/time or budget
+										li.services__ small to middle scale
 									a.services__link.btn(href="#") Get more info
-						ul.services__list
 							li.services__item
 								.services__item-wrapper
 									h3.services__title Dedicated Development Team
 									span.services__recommend recommended for
-									p.services__text fixed cost/time or budget
+									ul.services__-wrapper
+										li.services__ direct control over project stages
+										li.services__ full-time engagement of IT experts to your project
 									a.services__link.btn(href="#") Get more info
-						ul.services__list
 							li.services__item
 								.services__item-wrapper
 									h3.services__title Specialist for Relocation
 									span.services__recommend recommended for
-									p.services__text small to middle scale 
+									ul.services__-wrapper
+										li.services__ limited recruitment capabilities
+										li.services__ building/extending your IT department
 									a.services__link.btn(href="#") Get more info
-					p.section__text Learn more about each of these options and their difference 
-						a(href="/services") here
+					.section__wrapper
+						p.section__text Learn more about each of these options and their difference 
+							a(href="/services") here
+
+				section.section.section--dark.section--blue.section--bottom-with-gradient
+					.section__wrapper
+						h2.section__title Our Added Value
+						p.section__text With delivering what we do the best: development and design of software we provide our customers with
+						.features
+							.features__wrapper
+								ul.features__list
+									li.features__item
+										span.features__descr Outstanding quality
+									li.features__item
+										span.features__descr Specialist with proficient technical and language skills
+									li.features__item
+										span.features__descr Protected intellectual property rights
+									li.features__item
+										span.features__descr Personal meetings and direct comunication
+									li.features__item
+										span.features__descr Candidates market overview within 24 hours
+									li.features__item
+										span.features__descr Long-term partnership
 
 				section.section
-					h2.section__title Our Added Value
-					p.section__text With delivering what we do the best: development and design of software we provide our customers with
-					.features
-						.features__wrapper
-							ul.features__list
-								li.features__item
-									p.features__descr Outstanding quality
-								li.features__item
-									p.features__descr Specialist with proficient technical and language skills
-								li.features__item
-									p.features__descr Protected intellectual property rights
-								li.features__item
-									p.features__descr Personal meetings and direct comunication
-								li.features__item
-									p.features__descr Candidates market overview within 24 hours
-								li.features__item
-									p.features__descr Long-term partnership
-
-				section.section
-					h2.section__title Our Expertise
-					p.section__text Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
-					.slider
-						.slider__switcher
-						ul.slider__slides-wrapper
-							li.slider__slide
-								.slider__slide-inner.portfolio-item
-									p.portfolio-item__descr Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
-									.portfolio-item__tags.tags
-										ul.tags__list
-											li.tags__item React JS
-											li.tags__item Angular JS
-											li.tags__item JavaScript
-											li.tags__item CSS
-											li.tags__item HTML
-									.portfolio-item__img-wrapper
-										img(src="" alt="")
-									a.portfolio-item__link.btn(href="/portfolio")
-							li.slider__slide
-								.slider__slide-inner.portfolio-item
-									p.portfolio-item__descr Uneed Web builds mobile applications by using cross-platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
-									.portfolio-item__tags.tags
-										ul.tags__list
-											li.tags__item ReactJS Native
-											li.tags__item Ionic
-											li.tags__item Xamarin Framework
-									.portfolio-item__img-wrapper
-										img(src="" alt="")
-									a.portfolio-item__link.btn(href="/portfolio")
-							li.slider__slide
-								.slider__slide-inner.portfolio-item
-									p.portfolio-item__descr Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
-									.portfolio-item__tags.tags
-										ul.tags__list
-											li.tags__item Sketch
-											li.tags__item Adobe Photoshop
-											li.tags__item Adobe Illustrator
-											li.tags__item Interfaces
-											li.tags__item Web Design \ UX
-									.portfolio-item__img-wrapper
-										img(src="" alt="")
-									a.portfolio-item__link.btn(href="/portfolio")
+					.section__wrapper
+						h2.section__title Our Expertise
+						p.section__text Our team is comprised of devoted professionals who have expertise in multiple areas. We build web products that work and last, advance your customer journey, target and keep your customers in the loop.
+						.slider
+							.slider__switcher
+							ul.slider__slides-wrapper
+								li.slider__slide
+									.slider__slide-inner.portfolio-item
+										p.portfolio-item__descr Developing customized web products is our core competence. We bring online presence to businesses by creating applications that resemble services and products as a distinctive brand. Our experienced team of developers organize and structure both front-end and back-end to create smooth and intuitive navigation for browsing as well as rich user experience.
+										ul.portfolio-item__tags-list
+											li.tag React JS
+											li.tag Angular JS
+											li.tag JavaScript
+											li.tag CSS
+											li.tag HTML
+										.portfolio-item__img-wrapper
+											img(src="" alt="")
+										a.portfolio-item__link.btn(href="/portfolio") Go to portfolio
+											include icons/arrow-go
+								li.slider__slide
+									.slider__slide-inner.portfolio-item
+										p.portfolio-item__descr Uneed Web builds mobile applications by using cross-platform mobile application development. It enables you to have one codebase and to customize for multiple platforms, brings cost-effectiveness and simplicity once changes and synchronization are applied.
+										ul.portfolio-item__tags-list
+											li.tag ReactJS Native
+											li.tag Ionic
+											li.tag Xamarin Framework
+										.portfolio-item__img-wrapper
+											img(src="" alt="")
+										a.portfolio-item__link.btn(href="/portfolio") Go to portfolio
+											include icons/arrow-go
+								li.slider__slide
+									.slider__slide-inner.portfolio-item
+										p.portfolio-item__descr Uneed Web creates a unique product web design to match you company’s unique brand. A customized web design which is search engine friendly, stands out from your competitors and focuses on your customers. To optimize your customers browsing experience we create sites and systems based on responsive design.
+										ul.portfolio-item__tags-list
+											li.tag Sketch
+											li.tag Adobe Photoshop
+											li.tag Adobe Illustrator
+											li.tag Interfaces
+											li.tag Web Design \ UX
+										.portfolio-item__img-wrapper
+											img(src="" alt="")
+										a.portfolio-item__link.btn(href="/portfolio") Go to portfolio
+											include icons/arrow-go
 				include parts/b-footer
