--- a/parts/b-head.jade
+++ b/parts/b-head.jade
@@ -20,7 +20,7 @@ mixin head(title, keywords, description)
 		meta(name="theme-color" content="#ffffff")
 		title #{title}
 		link(href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,700" rel="stylesheet")
-		//- link(href="/css/index.css" rel="stylesheet")
+		link(href="/css/index.css" rel="stylesheet")
 		link(rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png")
 		link(rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png")
 		link(rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png")
