--- a/styl/variables.styl
+++ b/styl/variables.styl
@@ -1,11 +1,18 @@
-// dimentions
-$screenXSmall = 480px
-$screenSmall = 768px
-$screenMedium = 992px
-$screenLarge = 1200px
-$screenLargeXLarge = 1300px
-$screenXLarge = 1400px
-// end dimentions
+// $screenXSmall = 480px
+// $screenSmall = 768px
+// $screenMedium = 992px
+// $screenLarge = 1200px
+// $screenLargeXLarge = 1300px
+// $screenXLarge = 1400px
+
+$main-font = Roboto
+$main-color = #0e1a35
+
+$tablet-widths = "(min-width: 768px)"
+$desktop-widths = "(min-width: 1200px)"
+$mobile-widths-only = "(max-width: 767px)"
+
+$retina = "(min-resolution: 144dpi), (min-resolution: 1.5dppx)"
 
 @keyframes enterScale
 	0%
