--- a/parts/b-footer.jade
+++ b/parts/b-footer.jade
@@ -1,16 +1,16 @@
 footer.page-footer
-	include b-main-nav
-	.page-footer__subscribe.subscribe
-		h2.subscribe__title
-		form.subscribe__form
-			.subscribe__input-wrapper
-				.input-box
+	.page-footer__wrapper
+		include b-main-nav
+		.page-footer__subscribe.subscribe
+			h2.subscribe__title Get in touch with us
+			form.subscribe__form
+				.input-box.input-box--with-btn-right
 					input(type="email" placeholder="Enter your email")
-				button.btn(type="submit")
-	.page-footer__contact
-		address.page-footer__address Kiev, Ukraine, 02140, Bazhana Ave 24/1
-		span.page-footer__phone
-			a(href="tel:380955914765") +38 095 591 4765
-		span.page-footer__email
-			a(href="mailto:info@uneedweb.com?subject=Contact UNeed Web") info@uneedweb.com
-	.page-footer__copyrights &copy; 2017 UNeed Web All Right Reserved
+					button.subscribe__btn.btn(type="submit") OK
+		.page-footer__contact
+			address.page-footer__address Kiev, Ukraine, 02140, <br>Bazhana Ave 24/1
+			span.page-footer__phone
+				a(href="tel:380955914765") +38 095 591 4765
+			span.page-footer__email
+				a(href="mailto:info@uneedweb.com?subject=Contact UNeed Web") info@uneedweb.com
+		p.page-footer__copyrights &copy; 2017 UNeed Web All Right Reserved
