--- a/styl/blocks/btn.styl
+++ b/styl/blocks/btn.styl
@@ -1,7 +1,7 @@
 .btn
 	display inline-block
 	box-sizing border-box
-	padding 1rem 2.8rem
+	padding 1rem 2.75rem
 	font-family $main-font
 	font-size 16px
 	font-weight 400
@@ -12,4 +12,5 @@
 	background-color transparent
 	border solid 2px #8492af
 	border-radius 4px
+	transition all .3s
 	cursor pointer
