--- a/styl/blocks/features.styl
+++ b/styl/blocks/features.styl
@@ -3,15 +3,5 @@
 
 .features__list
 	ul-reset()
-	
-.features__item
-	padding-top 20px
-	padding-bottom 20px
-	padding-left 5.5rem
-
-.features__descr
-	font-size 16px
-	font-weight 400
-	letter-spacing 0.3px
-	color #fefefe
-	opacity 0.8
+	width 85%
+	margin 0 auto
