--- a/styl/blocks/services.styl
+++ b/styl/blocks/services.styl
@@ -6,7 +6,15 @@
 	
 .services__item
 	background-color #f3f8ff
+	background-repeat no-repeat
+	background-position top 25px center
 	border solid 1px #e3eaf3
+	&--project
+		background-image url("../images/gif/outsource.gif")
+	&--team
+		background-image url("../images/gif/outstaff.gif")
+	&--relocation
+		background-image url("../images/gif/relocation.gif")
 	
 .services__item-wrapper
 	wrapper()
@@ -35,18 +43,26 @@
 	text-align center
 	color #8492af
 	
-.services__-wrapper
+.services__recommends-list
 	ul-reset()
+	box-sizing border-box
 	width: 15rem
+	padding-left 1.5rem
 	margin 0 auto
 	margin-bottom 1.25rem
 
-.services__
-	padding-left 1.5rem
+.services__recommends-item
+	position relative
+	margin-bottom 0.5rem
 	font-size 14px
 	font-weight 400
-	line-height 1.7
 	color #0e1a35
+	svg
+		position absolute
+		top 50%
+		left -1.5rem
+		transform translateY(-50%)
+		margin-right 0.7rem
 	
 .services__link
 	width 12.5rem
