--- a/styl/blocks/tag.styl
+++ b/styl/blocks/tag.styl
@@ -3,8 +3,8 @@
 	font-size 14px
 	color #8092ba
 	font-weight 400
-	margin .3rem
-	padding .3rem 1rem
+	margin 0.3rem
+	padding 0.3rem 1rem
 	border-radius 15px
 	background-color #f3f8ff
 	border solid 1px #e3eaf3
