--- a/styl/index.styl
+++ b/styl/index.styl
@@ -1,8 +1,9 @@
 @import "variables"
 @import "mixins"
 @import "scaffolding"
-@import "blocks/page-wrapper"
 @import "blocks/btn"
+@import "blocks/input-box"
+@import "blocks/page-wrapper"
 @import "blocks/page-header"
 @import "blocks/logo"
 @import "blocks/main-nav"
@@ -10,7 +11,9 @@
 @import "blocks/section"
 @import "blocks/services"
 @import "blocks/features"
+@import "blocks/features-item"
 @import "blocks/slider"
 @import "blocks/portfolio-item"
 @import "blocks/tag"
 @import "blocks/page-footer"
+@import "blocks/subscribe"
