--- a/parts/b-footer.jade
+++ b/parts/b-footer.jade
@@ -1,6 +1,14 @@
 footer.page-footer
 	.page-footer__wrapper
-		include b-main-nav
+		nav.page-footer__main-nav.main-nav.main-nav--footer
+			.main-nav__list-wrapper
+				ul.main-nav__list
+					li.main-nav__item
+						a(href="/services") Services
+					li.main-nav__item
+						a(href="/portfolio") Portfolio
+					li.main-nav__item
+						a(href="/contact-us") Contact Us
 		.page-footer__subscribe.subscribe
 			h2.subscribe__title Get in touch with us
 			form.subscribe__form
