--- a/styl/blocks/btn.styl
+++ b/styl/blocks/btn.styl
@@ -12,5 +12,15 @@
 	background-color transparent
 	border solid 2px #8492af
 	border-radius 4px
-	transition all .3s
+	transition all 0.3s
 	cursor pointer
+	svg
+		*
+			transition all 0.3s
+	&:hover, &:active
+		color #fff
+		background-color #ff6955
+		border-color #ff6955
+		svg
+			*
+				fill #fff
