--- a/styl/blocks/features-item.styl
+++ b/styl/blocks/features-item.styl
@@ -7,11 +7,16 @@
 	&--icon-left
 		svg
 			flex-shrink 0
-			margin-right 1.25rem
 
 .features-item__descr
+	margin-left 1.25rem
 	font-size 16px
 	font-weight 400
 	letter-spacing 0.3px
 	color #fefefe
 	opacity 0.8
+	
+@media $tablet-widths
+
+	.features-item__descr
+		margin 1.25rem
