--- a/styl/blocks/input-box.styl
+++ b/styl/blocks/input-box.styl
@@ -1,5 +1,5 @@
 .input-box
-	input
+	input, textarea
 		box-sizing border-box
 		width: 100%
 		padding 1rem
@@ -22,6 +22,8 @@
 			border-color #576076
 			&::placeholder
 				opacity 0
+	textarea
+		resize none
 	&--with-btn-right
 		display flex
 		input
