--- a/styl/blocks/features.styl
+++ b/styl/blocks/features.styl
@@ -3,5 +3,12 @@
 
 .features__list
 	ul-reset()
+	display flex
+	flex-wrap wrap
 	width 85%
 	margin 0 auto
+	
+@media $tablet-widths
+
+	.features__item
+		width 50%
