--- a/styl/blocks/main-nav.styl
+++ b/styl/blocks/main-nav.styl
@@ -1,2 +1,121 @@
 .main-nav
-	display none
+	font-family $main-font
+	&--closed
+		.main-nav__toggle
+			&::before
+				content ""
+				position absolute
+				top 16px
+				left 50%
+				transform translateX(-50%)
+				width 2.3rem
+				height 4px
+				background-color #fff
+				border-radius 2px
+				box-shadow 0 10px 0 0 #fff, 0 20px 0 0 #fff
+
+		.main-nav__list
+			opacity 0
+			transform translateY(-100%)
+
+	&--opened
+		.main-nav__toggle
+			&::before,
+			&::after
+				content ""
+				position absolute
+				top 50%
+				left 50%
+				width 2rem
+				height 4px
+				background-color #fff
+				border-radius 2px
+			&::before
+				transform translate(-50%, -50%) rotate(45deg)
+				box-shadow none      
+			&::after
+				transform translate(-50%, -50%) rotate(-45deg)
+				
+		.main-nav__list
+			opacity 1
+			transform translateY(0)
+			
+	&--top
+		position fixed
+		display flex
+		align-items center
+		justify-content center
+		width 100%
+		min-height 88px
+		z-index 2
+		background-color #0e1a35
+		.main-nav__list
+			position absolute
+			top 0
+			left 0
+			flex-direction column
+			width 100%
+			height 100vh
+			padding-top 4rem
+			background-color rgba(#0e1a35, 0.97)
+			z-index 3
+			transition all 0.3s ease
+			
+		.main-nav__item
+			a
+				text-transform uppercase
+				text-align center
+
+	&--footer
+		.main-nav__list
+			display flex
+			flex-direction column
+
+.main-nav__wrapper
+	wrapper()
+	display flex
+	justify-content space-between
+
+.main-nav__toggle
+	position relative
+	width 63px
+	height 55px
+	margin 0
+	padding 0
+	font-size 0
+	background-color transparent
+	border none
+	z-index 4
+	&::before, &::after
+		transition all 0.3s
+	
+.main-nav__list
+	ul-reset()
+	display flex
+	
+.main-nav__item
+	a
+		display block
+		padding-top 1rem
+		padding-bottom 1rem
+		font-size 16px
+		letter-spacing 0.3px
+		text-decoration none
+		color #8492af
+		
+@media $desktop-widths
+
+	.main-nav
+		&--top
+			min-height 7rem
+		&--footer
+			.main-nav__list-wrapper
+				display flex
+				justify-content center
+			.main-nav__list
+				flex-direction row
+				flex-wrap wrap
+			.main-nav__item
+				margin-right 1.5rem
+				a
+					padding 0
