--- a/styl/index.styl
+++ b/styl/index.styl
@@ -3,6 +3,7 @@
 @import "scaffolding"
 @import "blocks/btn"
 @import "blocks/input-box"
+@import "blocks/link"
 @import "blocks/page-wrapper"
 @import "blocks/page-header"
 @import "blocks/logo"
@@ -17,3 +18,6 @@
 @import "blocks/tag"
 @import "blocks/page-footer"
 @import "blocks/subscribe"
+@import "blocks/contact-us"
+@import "blocks/contact-info"
+@import "blocks/social"
